<resources>
    <string name="app_name">WeatherInfo</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_valid_city">Please enter a valid city name</string>
    <string name="error_warning">Error. Could not load weather data.</string>
    <string name="marker">"Marker in "</string>
    <string name="marker_in">"Marker in "</string>
    <string name="enter_city_name">Please enter a city name.</string>
    <string name="new_city">New City</string>
    <string name="current_temperature">Current Temperature:</string>
    <string name="description">Description:</string>
    <string name="maximum_temperature">Maximum temperature:</string>
    <string name="minimum_temperature">Minimum temperature:</string>
    <string name="latitude">Latitude:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="hello_press_the_plus_button_to_add_a_city_n_press_the_details_to_see_that_city_s_weather">Hello! Press the \'plus\' button to add a city. \n Press the \'details\' to see that city\'s weather.</string>
    <string name="enter_city_name_hint">Enter City Name:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
