<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.ait.android.weatherinfo.swipeanddrag.DetailsActivity">

    <TextView
        android:id="@+id/cityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:weightSum="6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/current_temperature"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/description"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/maximum_temperature"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/minimum_temperature"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/latitude"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/longtitude"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingRight="15dp"
            android:weightSum="6">

            <TextView
                android:id="@+id/currTemp"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#ff0000"/>

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#0000ff"/>


            <TextView
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <fragment
        android:layout_marginTop="10dp"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
